* 2014-04-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 31966: Check for quota exceptions from external storages, too 

* 2014-04-09 - thorben.betten@open-xchange.com

 - Fix for bug 31968: Drop personal infostore folders on user deletion
 - Fix for bug 31978: Added proper i18n error display message for error code APP-0093

* 2014-04-07 - thorben.betten@open-xchange.com

 - Fix for bug 31929: Support quota for attachments of PIM objects

* 2014-07-07 - ioannis.chouklis@open-xchange.com

 - Fix for bug 26544: Get all attachments sorted by ID fails

* 2014-04-07 - martin.schneider@open-xchange.com

 - Fix for bug 31797: Initialize PatternLayout for LMDC manually if just the SyslogAppender is configured

* 2014-04-07 - tobias.friedrich@open-xchange.com

 - Fix for bug 31935: Check for potential case- and unicode-normalization conflicts when storing folders
 - Fix for bug 31685: Added displayable exception message for IFO-1700
  
* 2014-04-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 31912: Don't apply personal reminder setting for appointments in shared folders  
 - Fix for bug 31895: Corrected file ID encoding when accessing the checksum storage   

* 2014-04-05 - thorben.betten@open-xchange.com

 - Fix for bug 31903: Added "infostore" to necessary dependencies

* 2014-04-05 - tobias.friedrich@open-xchange.com

 - Fix for bug 31899: Pass unique folder ID when requesting quota information  

* 2014-04-04 - thorben.betten@open-xchange.com

 - Fix for bug 31582: Remove leading and trailing whitespaces in duplicated folder check

* 2014-04-04 - thorben.betten@open-xchange.com

 - Fix for bug 31782: Proper spam handler look-up if wrapping SMAL bundle is enabled
 - Fix for bug 31906: Deny changing mail/transport protocol on mail account update operation

* 2014-04-03 - martin.herfurth@open-xchange.com

 - Fix for bug 31884: Avoid NPE.

* 2014-04-03 - thorben.betten@open-xchange.com
